Added js to the 'Contact information' tab

--- a/src/html/personal-cabinet/contact-details.html
+++ b/src/html/personal-cabinet/contact-details.html
@@ -1,6 +1,6 @@
 <section class="contact">
     <div class="contact__fop">
-        <form class="contact__form" id="form">
+        <form class="contact__form">
             <div class="contact__form-container">
                 <input type="text" placeholder="ФИО*" required id="fullname" class="contact__input">
                 <input type="email" name="email" id="email" placeholder="Email*" required class="contact__input">
@@ -21,8 +21,8 @@
                 <input type="text" placeholder="Компания*" required id="company" name="company" class="contact__input">
                 <input type="text" placeholder="Контактное лицо*" required id="contact-face" name="contact-face"
                     class="contact__input">
-                <input type="email" name="email" id="email" placeholder="Email*" required class="contact__input">
-                <input type="tel" name="tel" id="tel" placeholder="Телефон*" required class="contact__input">
+                <input type="email" name="emailCorp" id="emailCorp" placeholder="Email*" required class="contact__input">
+                <input type="tel" name="telCorp" id="telCorp" placeholder="Телефон*" required class="contact__input">
                 <button class="contact__btn">Сохранить</button>
             </div>
             <div class="contact__form-container">
