--- a/src/personal-cabinet.html
+++ b/src/personal-cabinet.html
@@ -22,7 +22,7 @@
                         fill="#8A8A8A" />
                 </svg>
 
-                Личный кабинет
+                Корзина
             </div>
         </div>
     </section>
