--- a/src/html/header.html
+++ b/src/html/header.html
@@ -188,7 +188,101 @@
                     </div>
                     <div class="header__bag">
                         <img src="@icons/header-footer/bag.svg" alt="bag">
-                        <div class="header__bag-counter">0</div>
+                        <div class="header__bag-counter">2</div>
+                    </div>
+                    <div class="mini-basket mini-basket_hide">
+                        <table class="mini-basket__table">
+                            <tbody class="mini-basket__body">
+                                <tr class="mini-basket__body-row">
+                                    <td class="mini-basket__body-cell">
+                                        Орех соленый 80г.
+                                    </td>
+                                    <td class="mini-basket__body-cell">
+                                        <div class="mini-basket__count">
+                                            <div class="mini-basket__arrow-prev">
+                                                <svg width="7" height="10" viewBox="0 0 7 10" fill="none"
+                                                    xmlns="http://www.w3.org/2000/svg">
+                                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                                        d="M2.56815 4.99357L6.4 1.22265L5.05478 0L0 4.99357L5.05478 10L6.4 8.77735L2.56815 4.99357Z" />
+                                                </svg>
+                                            </div>
+                                            <input type="number" name="countMini" id="countMini" value="4">
+                                            <div class="mini-basket__arrow-next">
+                                                <svg width="7" height="10" viewBox="0 0 7 10" fill="none"
+                                                    xmlns="http://www.w3.org/2000/svg">
+                                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                                        d="M4.43185 4.99357L0.6 1.22265L1.94522 0L7 4.99357L1.94522 10L0.6 8.77735L4.43185 4.99357Z" />
+                                                </svg>
+                                            </div>
+                                        </div>
+                                    </td>
+                                    <td class="mini-basket__body-cell">
+                                        <div class="mini-basket__product-price" style="display: none;">20</div>
+                                        <span class="mini-basket__price">0</span> грн.
+                                    </td>
+                                    <td class="mini-basket__body-cell">
+                                        <div class="mini-basket__exit">
+                                            <svg width="12" height="12" viewBox="0 0 12 12" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <path
+                                                    d="M12 1.2L10.8 0L6 4.8L1.2 0L0 1.2L4.8 6L0 10.8L1.2 12L6 7.2L10.8 12L12 10.8L7.2 6L12 1.2Z" />
+                                            </svg>
+                                        </div>
+                                    </td>
+                                </tr>
+                                <tr class="mini-basket__body-row">
+                                    <td class="mini-basket__body-cell">
+                                        Орех соленый 80г.
+                                    </td>
+                                    <td class="mini-basket__body-cell">
+                                        <div class="mini-basket__count">
+                                            <div class="mini-basket__arrow-prev">
+                                                <svg width="7" height="10" viewBox="0 0 7 10" fill="none"
+                                                    xmlns="http://www.w3.org/2000/svg">
+                                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                                        d="M2.56815 4.99357L6.4 1.22265L5.05478 0L0 4.99357L5.05478 10L6.4 8.77735L2.56815 4.99357Z" />
+                                                </svg>
+                                            </div>
+                                            <input type="number" name="countMini" id="countMini" value="4">
+                                            <div class="mini-basket__arrow-next">
+                                                <svg width="7" height="10" viewBox="0 0 7 10" fill="none"
+                                                    xmlns="http://www.w3.org/2000/svg">
+                                                    <path fill-rule="evenodd" clip-rule="evenodd"
+                                                        d="M4.43185 4.99357L0.6 1.22265L1.94522 0L7 4.99357L1.94522 10L0.6 8.77735L4.43185 4.99357Z" />
+                                                </svg>
+                                            </div>
+                                        </div>
+                                    </td>
+                                    <td class="mini-basket__body-cell">
+                                        <div class="mini-basket__product-price" style="display: none;">25</div>
+                                        <span class="mini-basket__price">0</span> грн.
+                                    </td>
+                                    <td class="mini-basket__body-cell">
+                                        <div class="mini-basket__exit">
+                                            <svg width="12" height="12" viewBox="0 0 12 12" fill="none"
+                                                xmlns="http://www.w3.org/2000/svg">
+                                                <path
+                                                    d="M12 1.2L10.8 0L6 4.8L1.2 0L0 1.2L4.8 6L0 10.8L1.2 12L6 7.2L10.8 12L12 10.8L7.2 6L12 1.2Z" />
+                                            </svg>
+                                        </div>
+                                    </td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <div class="mini-basket__action">
+                            <div class="mini-basket__action-total">
+                                <div class="mini-basket__action-text">
+                                    Всего
+                                </div>
+                                <div class="mini-basket__action-price">
+                                    <span class="mini-basket__action-price-total">175</span>
+                                    грн.
+                                </div>
+                            </div>
+                            <a href="@html/basket.html" class="mini-basket__action-complete">
+                                Перейти в корзину
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
