--- a/src/basket.html
+++ b/src/basket.html
@@ -45,166 +45,168 @@
         </div>
     </section>
     <section class="basket">
-        <table class="basket__table">
-            <thead class="basket__head">
-                <tr class="basket__head-row">
-                    <td class="basket__head-cell">
-                        Товар
-                        <svg width="10" height="7" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" clip-rule="evenodd"
-                                d="M4.99357 4.43185L1.22265 0.6L0 1.94522L4.99357 7L10 1.94522L8.77735 0.6L4.99357 4.43185Z"
-                                fill="#93B474" />
-                        </svg>
-                    </td>
-                    <td class="basket__head-cell">
-                        Кол - во
-                        <svg width="10" height="7" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" clip-rule="evenodd"
-                                d="M4.99357 4.43185L1.22265 0.6L0 1.94522L4.99357 7L10 1.94522L8.77735 0.6L4.99357 4.43185Z"
-                                fill="#93B474" />
-                        </svg>
-                    </td>
-                    <td class="basket__head-cell">
-                        Цена за товар
-                        <svg width="10" height="7" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" clip-rule="evenodd"
-                                d="M4.99357 4.43185L1.22265 0.6L0 1.94522L4.99357 7L10 1.94522L8.77735 0.6L4.99357 4.43185Z"
-                                fill="#93B474" />
-                        </svg>
-                    </td>
-                    <td class="basket__head-cell">
-                        Итоговая стоимость
-                        <svg width="10" height="7" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
-                            <path fill-rule="evenodd" clip-rule="evenodd"
-                                d="M4.99357 4.43185L1.22265 0.6L0 1.94522L4.99357 7L10 1.94522L8.77735 0.6L4.99357 4.43185Z"
-                                fill="#93B474" />
-                        </svg>
-                    </td>
-                </tr>
-            </thead>
-            <tbody class="basket__body">
-                <tr class="basket__body-row">
-                    <td class="basket__body-cell">
-                        Орех соленый 80г.
-                    </td>
-                    <td class="basket__body-cell">
-                        <div class="basket__count">
-                            <div class="basket__arrow-prev">
-                                <svg width="7" height="10" viewBox="0 0 7 10" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <path fill-rule="evenodd" clip-rule="evenodd"
-                                        d="M2.56815 4.99357L6.4 1.22265L5.05478 0L0 4.99357L5.05478 10L6.4 8.77735L2.56815 4.99357Z" />
-                                </svg>
+        <div class="basket__container">
+            <table class="basket__table">
+                <thead class="basket__head">
+                    <tr class="basket__head-row">
+                        <td class="basket__head-cell">
+                            Товар
+                            <svg width="10" height="7" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M4.99357 4.43185L1.22265 0.6L0 1.94522L4.99357 7L10 1.94522L8.77735 0.6L4.99357 4.43185Z"
+                                    fill="#93B474" />
+                            </svg>
+                        </td>
+                        <td class="basket__head-cell">
+                            Кол - во
+                            <svg width="10" height="7" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M4.99357 4.43185L1.22265 0.6L0 1.94522L4.99357 7L10 1.94522L8.77735 0.6L4.99357 4.43185Z"
+                                    fill="#93B474" />
+                            </svg>
+                        </td>
+                        <td class="basket__head-cell">
+                            Цена за товар
+                            <svg width="10" height="7" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M4.99357 4.43185L1.22265 0.6L0 1.94522L4.99357 7L10 1.94522L8.77735 0.6L4.99357 4.43185Z"
+                                    fill="#93B474" />
+                            </svg>
+                        </td>
+                        <td class="basket__head-cell">
+                            Итоговая стоимость
+                            <svg width="10" height="7" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path fill-rule="evenodd" clip-rule="evenodd"
+                                    d="M4.99357 4.43185L1.22265 0.6L0 1.94522L4.99357 7L10 1.94522L8.77735 0.6L4.99357 4.43185Z"
+                                    fill="#93B474" />
+                            </svg>
+                        </td>
+                    </tr>
+                </thead>
+                <tbody class="basket__body">
+                    <tr class="basket__body-row">
+                        <td class="basket__body-cell">
+                            Орех соленый 80г.
+                        </td>
+                        <td class="basket__body-cell">
+                            <div class="basket__count">
+                                <div class="basket__arrow-prev">
+                                    <svg width="7" height="10" viewBox="0 0 7 10" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" clip-rule="evenodd"
+                                            d="M2.56815 4.99357L6.4 1.22265L5.05478 0L0 4.99357L5.05478 10L6.4 8.77735L2.56815 4.99357Z" />
+                                    </svg>
+                                </div>
+                                <input type="number" name="count" id="count" value="4">
+                                <div class="basket__arrow-next">
+                                    <svg width="7" height="10" viewBox="0 0 7 10" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" clip-rule="evenodd"
+                                            d="M4.43185 4.99357L0.6 1.22265L1.94522 0L7 4.99357L1.94522 10L0.6 8.77735L4.43185 4.99357Z" />
+                                    </svg>
+                                </div>
                             </div>
-                            <input type="number" name="count" id="count" value="4">
-                            <div class="basket__arrow-next">
-                                <svg width="7" height="10" viewBox="0 0 7 10" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <path fill-rule="evenodd" clip-rule="evenodd"
-                                        d="M4.43185 4.99357L0.6 1.22265L1.94522 0L7 4.99357L1.94522 10L0.6 8.77735L4.43185 4.99357Z" />
-                                </svg>
+                        </td>
+                        <td class="basket__body-cell">
+                            <span class="basket__cost">25</span> грн.
+                        </td>
+                        <td class="basket__body-cell">
+                            <span class="basket__total-price">0</span> грн.
+                        </td>
+                    </tr>
+                    <tr class="basket__body-row">
+                        <td class="basket__body-cell">
+                            Орех соленый 80г.
+                        </td>
+                        <td class="basket__body-cell">
+                            <div class="basket__count">
+                                <div class="basket__arrow-prev">
+                                    <svg width="7" height="10" viewBox="0 0 7 10" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" clip-rule="evenodd"
+                                            d="M2.56815 4.99357L6.4 1.22265L5.05478 0L0 4.99357L5.05478 10L6.4 8.77735L2.56815 4.99357Z" />
+                                    </svg>
+                                </div>
+                                <input type="number" name="count" id="count" value="1">
+                                <div class="basket__arrow-next">
+                                    <svg width="7" height="10" viewBox="0 0 7 10" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" clip-rule="evenodd"
+                                            d="M4.43185 4.99357L0.6 1.22265L1.94522 0L7 4.99357L1.94522 10L0.6 8.77735L4.43185 4.99357Z" />
+                                    </svg>
+                                </div>
                             </div>
-                        </div>
-                    </td>
-                    <td class="basket__body-cell">
-                        <span class="basket__cost">25</span> грн.
-                    </td>
-                    <td class="basket__body-cell">
-                        <span class="basket__total-price">0</span> грн.
-                    </td>
-                </tr>
-                <tr class="basket__body-row">
-                    <td class="basket__body-cell">
-                        Орех соленый 80г.
-                    </td>
-                    <td class="basket__body-cell">
-                        <div class="basket__count">
-                            <div class="basket__arrow-prev">
-                                <svg width="7" height="10" viewBox="0 0 7 10" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <path fill-rule="evenodd" clip-rule="evenodd"
-                                        d="M2.56815 4.99357L6.4 1.22265L5.05478 0L0 4.99357L5.05478 10L6.4 8.77735L2.56815 4.99357Z" />
-                                </svg>
+                        </td>
+                        <td class="basket__body-cell">
+                            <span class="basket__cost">25</span> грн.
+                        </td>
+                        <td class="basket__body-cell">
+                            <span class="basket__total-price">0</span> грн.
+                        </td>
+                    </tr>
+                    <tr class="basket__body-row">
+                        <td class="basket__body-cell">
+                            Орех соленый 80г.
+                        </td>
+                        <td class="basket__body-cell">
+                            <div class="basket__count">
+                                <div class="basket__arrow-prev">
+                                    <svg width="7" height="10" viewBox="0 0 7 10" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" clip-rule="evenodd"
+                                            d="M2.56815 4.99357L6.4 1.22265L5.05478 0L0 4.99357L5.05478 10L6.4 8.77735L2.56815 4.99357Z" />
+                                    </svg>
+                                </div>
+                                <input type="number" name="count" id="count" value="1">
+                                <div class="basket__arrow-next">
+                                    <svg width="7" height="10" viewBox="0 0 7 10" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" clip-rule="evenodd"
+                                            d="M4.43185 4.99357L0.6 1.22265L1.94522 0L7 4.99357L1.94522 10L0.6 8.77735L4.43185 4.99357Z" />
+                                    </svg>
+                                </div>
                             </div>
-                            <input type="number" name="count" id="count" value="1">
-                            <div class="basket__arrow-next">
-                                <svg width="7" height="10" viewBox="0 0 7 10" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <path fill-rule="evenodd" clip-rule="evenodd"
-                                        d="M4.43185 4.99357L0.6 1.22265L1.94522 0L7 4.99357L1.94522 10L0.6 8.77735L4.43185 4.99357Z" />
-                                </svg>
+                        </td>
+                        <td class="basket__body-cell">
+                            <span class="basket__cost">25</span> грн.
+                        </td>
+                        <td class="basket__body-cell">
+                            <span class="basket__total-price">0</span> грн.
+                        </td>
+                    </tr>
+                    <tr class="basket__body-row">
+                        <td class="basket__body-cell">
+                            Орех соленый 80г.
+                        </td>
+                        <td class="basket__body-cell">
+                            <div class="basket__count">
+                                <div class="basket__arrow-prev">
+                                    <svg width="7" height="10" viewBox="0 0 7 10" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" clip-rule="evenodd"
+                                            d="M2.56815 4.99357L6.4 1.22265L5.05478 0L0 4.99357L5.05478 10L6.4 8.77735L2.56815 4.99357Z" />
+                                    </svg>
+                                </div>
+                                <input type="number" name="count" id="count" value="1">
+                                <div class="basket__arrow-next">
+                                    <svg width="7" height="10" viewBox="0 0 7 10" fill="none"
+                                        xmlns="http://www.w3.org/2000/svg">
+                                        <path fill-rule="evenodd" clip-rule="evenodd"
+                                            d="M4.43185 4.99357L0.6 1.22265L1.94522 0L7 4.99357L1.94522 10L0.6 8.77735L4.43185 4.99357Z" />
+                                    </svg>
+                                </div>
                             </div>
-                        </div>
-                    </td>
-                    <td class="basket__body-cell">
-                        <span class="basket__cost">25</span> грн.
-                    </td>
-                    <td class="basket__body-cell">
-                        <span class="basket__total-price">0</span> грн.
-                    </td>
-                </tr>
-                <tr class="basket__body-row">
-                    <td class="basket__body-cell">
-                        Орех соленый 80г.
-                    </td>
-                    <td class="basket__body-cell">
-                        <div class="basket__count">
-                            <div class="basket__arrow-prev">
-                                <svg width="7" height="10" viewBox="0 0 7 10" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <path fill-rule="evenodd" clip-rule="evenodd"
-                                        d="M2.56815 4.99357L6.4 1.22265L5.05478 0L0 4.99357L5.05478 10L6.4 8.77735L2.56815 4.99357Z" />
-                                </svg>
-                            </div>
-                            <input type="number" name="count" id="count" value="1">
-                            <div class="basket__arrow-next">
-                                <svg width="7" height="10" viewBox="0 0 7 10" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <path fill-rule="evenodd" clip-rule="evenodd"
-                                        d="M4.43185 4.99357L0.6 1.22265L1.94522 0L7 4.99357L1.94522 10L0.6 8.77735L4.43185 4.99357Z" />
-                                </svg>
-                            </div>
-                        </div>
-                    </td>
-                    <td class="basket__body-cell">
-                        <span class="basket__cost">25</span> грн.
-                    </td>
-                    <td class="basket__body-cell">
-                        <span class="basket__total-price">0</span> грн.
-                    </td>
-                </tr>
-                <tr class="basket__body-row">
-                    <td class="basket__body-cell">
-                        Орех соленый 80г.
-                    </td>
-                    <td class="basket__body-cell">
-                        <div class="basket__count">
-                            <div class="basket__arrow-prev">
-                                <svg width="7" height="10" viewBox="0 0 7 10" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <path fill-rule="evenodd" clip-rule="evenodd"
-                                        d="M2.56815 4.99357L6.4 1.22265L5.05478 0L0 4.99357L5.05478 10L6.4 8.77735L2.56815 4.99357Z" />
-                                </svg>
-                            </div>
-                            <input type="number" name="count" id="count" value="1">
-                            <div class="basket__arrow-next">
-                                <svg width="7" height="10" viewBox="0 0 7 10" fill="none"
-                                    xmlns="http://www.w3.org/2000/svg">
-                                    <path fill-rule="evenodd" clip-rule="evenodd"
-                                        d="M4.43185 4.99357L0.6 1.22265L1.94522 0L7 4.99357L1.94522 10L0.6 8.77735L4.43185 4.99357Z" />
-                                </svg>
-                            </div>
-                        </div>
-                    </td>
-                    <td class="basket__body-cell">
-                        <span class="basket__cost">25</span> грн.
-                    </td>
-                    <td class="basket__body-cell">
-                        <span class="basket__total-price">0</span> грн.
-                    </td>
-                </tr>
-            </tbody>
-        </table>
+                        </td>
+                        <td class="basket__body-cell">
+                            <span class="basket__cost">25</span> грн.
+                        </td>
+                        <td class="basket__body-cell">
+                            <span class="basket__total-price">0</span> грн.
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
         <div class="action">
             <a href="@html/product-catalog.html" class="action__back">
                 <svg width="14" height="12" viewBox="0 0 14 12" fill="none" xmlns="http://www.w3.org/2000/svg">
