--- a/src/personal-cabinet.html
+++ b/src/personal-cabinet.html
@@ -80,7 +80,9 @@
                 <div class="content__tab">
                     @@include('html/personal-cabinet/password.html', {})
                 </div>
-                <div class="content__tab">das</div>
+                <div class="content__tab">
+                    @@include('html/personal-cabinet/address.html', {})
+                </div>
             </div>
         </div>
     </section>
@@ -90,6 +92,7 @@
     <script src="js/script.order-history.js"></script>
     <script src="js/script.password.js"></script>
     <script src="js/script.contact.js"></script>
+    <script src="js/script.address.js"></script>
 </body>
 
 </html>
