Added js to tab 'Address details'

--- a/src/html/personal-cabinet/address.html
+++ b/src/html/personal-cabinet/address.html
@@ -45,8 +45,8 @@
             </div>
             <div class="address__country">
                 <input class="select__input" type="text" required name="countryCorp" id="countryCorp">
-                <div class="select__head">Страна</div>
-                <ul class="select__list">
+                <div class="select__head select__head-corp">Страна</div>
+                <ul class="select__list select__list-corp">
                     <li class="select__item" data-value="rus">Россия</li>
                     <li class="select__item" data-value="ukr">Украина</li>
                     <li class="select__item" data-value="blr">Беларусь</li>
@@ -54,7 +54,7 @@
             </div>
             <div class="address__region">
                 <input class="select__input" type="text" required name="regionCorp" id="regionCorp">
-                <div class="select__head">Область</div>
+                <div class="select__head select__head-corp">Область</div>
                 <ul class="select__list select__list_rus">
                     <li class="select__item" data-value="Moscow region">Московская обл.</li>
                     <li class="select__item" data-value="Nizhny Novgorod region">Нижегородская обл.</li>
@@ -78,8 +78,8 @@
             </div>
             <div class="address__country">
                 <input class="select__input" type="text" required name="countryLegal" id="countryLegal">
-                <div class="select__head">Страна</div>
-                <ul class="select__list">
+                <div class="select__head select__head-legal">Страна</div>
+                <ul class="select__list select__list-legal">
                     <li class="select__item" data-value="rus">Россия</li>
                     <li class="select__item" data-value="ukr">Украина</li>
                     <li class="select__item" data-value="blr">Беларусь</li>
@@ -87,7 +87,7 @@
             </div>
             <div class="address__region">
                 <input class="select__input" type="text" required name="regionLegal" id="regionLegal">
-                <div class="select__head">Область</div>
+                <div class="select__head select__head-legal">Область</div>
                 <ul class="select__list select__list_rus">
                     <li class="select__item" data-value="Moscow region">Московская обл.</li>
                     <li class="select__item" data-value="Nizhny Novgorod region">Нижегородская обл.</li>
