--- a/src/personal-cabinet.html
+++ b/src/personal-cabinet.html
@@ -63,7 +63,7 @@
                 <li class="content__list-item"><span class="content__item" data-tag="Contact details">Контактная
                         информация</span></li>
                 <li class="content__list-item"><span class="content__item" data-tag="Password">Пароль</span></li>
-                <li class="content__list-item"><span class="content__item" data-tag="Address">Адрес</span></li>
+                <li class="content__list-item"><span class="content__item" data-tag="Address">Адрес реквизиты</span></li>
             </ul>
         </div>
         <div class="content__container">
