Сверстал страницу 'Оформление заказа' вместе с табами

--- a/src/basket.html
+++ b/src/basket.html
@@ -226,7 +226,7 @@
                         грн.
                     </div>
                 </div>
-                <a href="#" class="action__complete">
+                <a href="@html/ordering.html" class="action__complete">
                     Оформить заказ
                 </a>
             </div>
