Made an adaptation to the 'Checkout' page

--- a/src/ordering.html
+++ b/src/ordering.html
@@ -274,7 +274,7 @@
                     </div>
                 </div>
                 <input type="radio" name="delivery" id="courier" class="ordering__radio">
-                <label for="courier" class="ordering__label">Курьер по Одессе </label>
+                <label for="courier" class="ordering__label">Курьер по Одессе <img src="@icons/sticker.svg" alt="free"></label>
                 <input type="text" name="address" id="address" placeholder="Адрес*" required>
                 <input type="radio" name="delivery" id="selfDelivery" class="ordering__radio">
                 <label for="selfDelivery" class="ordering__label">Самовывоз со склада</label>
