Made an 'Order' page and adapted it

--- a/src/404.html
+++ b/src/404.html
@@ -25,12 +25,7 @@
         </a>
     </section>
     @@include('html/footer.html', {theme: 'footer_dark'})
-    @@include('html/script.html', {})
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            document.body.classList.remove('webp');
-        })
-    </script>
+    <script src="js/script.header.js"></script>
 </body>
 
 </html>
