Small corrections added

--- a/src/html/header.html
+++ b/src/html/header.html
@@ -312,7 +312,7 @@
                         <a href="@html/news.html" class="header__list-link">Новости и статьи</a>
                     </li>
                     <li class="header__list-item">
-                        <a href="#" class="header__list-link">Контакты</a>
+                        <a href="@html/404.html" class="header__list-link">Контакты</a>
                     </li>
                 </ul>
             </nav>
