--- a/src/login.html
+++ b/src/login.html
@@ -42,7 +42,7 @@
         </form>
     </section>
     @@include('html/footer.html', {theme: 'footer_dark'})
-    @@include('html/script.html', {})
+    <script src="js/script.header.js"></script>
     <script src="js/script.login.js"></script>
 </body>
 
