--- a/src/news.html
+++ b/src/news.html
@@ -52,7 +52,10 @@
                     <a href="@html/one-news.html" class="main-news__article-link">
                         Читать
                         <div class="main-news__article-link-img">
-                            <img src="@icons/arrow-link.svg" alt="arrow-link">
+                            <svg width="18" height="10" viewBox="0 0 18 10" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path d="M17.7938 5.49763C17.7936 5.49784 17.7934 5.49809 17.7931 5.4983L14.1192 9.15455C13.8439 9.42845 13.3988 9.42743 13.1248 9.15216C12.8508 8.87692 12.8519 8.43174 13.1271 8.1578L15.5938 5.70305H0.703125C0.314789 5.70305 0 5.38826 0 4.99992C0 4.61159 0.314789 4.2968 0.703125 4.2968H15.5938L13.1272 1.84205C12.8519 1.56811 12.8509 1.12293 13.1248 0.847688C13.3988 0.572379 13.844 0.571429 14.1192 0.845297L17.7932 4.50155C17.7934 4.50176 17.7936 4.50201 17.7938 4.50222C18.0692 4.77707 18.0683 5.22369 17.7938 5.49763Z"/>
+                                </svg>
+                                
                         </div>
                     </a>
                 </div>
