--- a/src/ordering.html
+++ b/src/ordering.html
@@ -237,9 +237,9 @@
             </div>
             <div class="ordering__container">
                 <div class="ordering__fop">
-                    <input type="text" required placeholder="ФИО*" name="fullname" id="fullname">
+                    <input type="text" name="fullname" id="fullname" placeholder="ФИО*" required>
                     <input type="email" name="email" id="email" placeholder="Email*" required>
-                    <input type="tel" name="tel" id="tel" placeholder="Телефон*">
+                    <input type="tel" name="tel" id="tel" placeholder="Телефон*" required>
                 </div>
                 <div class="ordering__corp">
                     <input type="text" name="company" id="company" placeholder="Компания">
