--- a/src/html/footer.html
+++ b/src/html/footer.html
@@ -1,83 +1,85 @@
-<footer class="footer @@theme">
-    <div class="footer__info">
-        <div class="footer__contacts">
-            <div class="footer__title">
-                Контакты
+<footer class="footer">
+    <div class="footer__container @@theme">
+        <div class="footer__info">
+            <div class="footer__contacts">
+                <div class="footer__title">
+                    Контакты
+                </div>
+                <div class="footer__info-container">
+                    <div class="footer__contacts-info">
+                        <div class="footer__tel">
+                            <div class="footer__tel-img">
+                                <img src="@icons/header-footer/telephone-handle-silhouette.svg"
+                                    alt="telephone-handle-silhouette">
+                            </div>
+                            <div class="footer__tel-group">
+                                <a href="tel:+380957111111" class="footer__tel-number">+38 (095) 711 11 11</a>
+                                <a href="tel:+380957111111" class="footer__tel-number">+38 (095) 711 11 11</a>
+                            </div>
+                        </div>
+                        <div class="footer__social">
+                            <div class="footer__social-item">
+                                <a href="#" class="footer__social-link">
+                                    <img src="@icons/social/viber.svg" alt="viber">
+                                </a>
+                            </div>
+                            <div class="footer__social-item">
+                                <a href="#" class="footer__social-link">
+                                    <img src="@icons/social/telegram.svg" alt="telegram">
+                                </a>
+                            </div>
+                            <div class="footer__social-item">
+                                <a href="#" class="footer__social-link">
+                                    <img src="@icons/social/whatsapp.svg" alt="whatsapp">
+                                </a>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="footer__email">
+                        <div class="footer__email-img">
+                            <img src="@icons/header-footer/envelope.svg" alt="envelope">
+                        </div>
+                        <a href="mailto:nuts@nbsc.com.ua
+                        " class="footer__email-link">nuts@nbsc.com.ua
+                        </a>
+                    </div>
+                    <div class="footer__office">
+                        <div class="footer__office-wrapper">
+                            <div class="footer__office-img">
+                                <img src="@icons/header-footer/house-black-silhouette-without-door.svg"
+                                    alt="house-black-silhouette-without-door">
+                            </div>
+                            <div class="footer__office-title">
+                                Офис и отдел продаж
+                            </div>
+                        </div>
+                        <div class="footer__office-addres">
+                            Украина, г. Одесса, <br>
+                            ул. Космонавтов, 32
+                        </div>
+                    </div>
+                    <div class="footer__manufacture">
+                        <div class="footer__manufacture-wrapper">
+                            <div class="footer__manufacture-img">
+                                <img src="@icons/header-footer/tree.svg" alt="tree">
+                            </div>
+                            <div class="footer__manufacture-title">
+                                Производство
+                            </div>
+                        </div>
+                        <div class="footer__manufacture-addres">
+                            Украина, Одесская обл, <br>
+                            с. Яськи, ул. Центральная, 232
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div class="footer__info-container">
-                <div class="footer__contacts-info">
-                    <div class="footer__tel">
-                        <div class="footer__tel-img">
-                            <img src="@icons/header-footer/telephone-handle-silhouette.svg"
-                                alt="telephone-handle-silhouette">
-                        </div>
-                        <div class="footer__tel-group">
-                            <a href="tel:+380957111111" class="footer__tel-number">+38 (095) 711 11 11</a>
-                            <a href="tel:+380957111111" class="footer__tel-number">+38 (095) 711 11 11</a>
-                        </div>
-                    </div>
-                    <div class="footer__social">
-                        <div class="footer__social-item">
-                            <a href="#" class="footer__social-link">
-                                <img src="@icons/social/viber.svg" alt="viber">
-                            </a>
-                        </div>
-                        <div class="footer__social-item">
-                            <a href="#" class="footer__social-link">
-                                <img src="@icons/social/telegram.svg" alt="telegram">
-                            </a>
-                        </div>
-                        <div class="footer__social-item">
-                            <a href="#" class="footer__social-link">
-                                <img src="@icons/social/whatsapp.svg" alt="whatsapp">
-                            </a>
-                        </div>
-                    </div>
-                </div>
-                <div class="footer__email">
-                    <div class="footer__email-img">
-                        <img src="@icons/header-footer/envelope.svg" alt="envelope">
-                    </div>
-                    <a href="mailto:nuts@nbsc.com.ua
-                    " class="footer__email-link">nuts@nbsc.com.ua
-                    </a>
-                </div>
-                <div class="footer__office">
-                    <div class="footer__office-wrapper">
-                        <div class="footer__office-img">
-                            <img src="@icons/header-footer/house-black-silhouette-without-door.svg"
-                                alt="house-black-silhouette-without-door">
-                        </div>
-                        <div class="footer__office-title">
-                            Офис и отдел продаж
-                        </div>
-                    </div>
-                    <div class="footer__office-addres">
-                        Украина, г. Одесса, <br>
-                        ул. Космонавтов, 32
-                    </div>
-                </div>
-                <div class="footer__manufacture">
-                    <div class="footer__manufacture-wrapper">
-                        <div class="footer__manufacture-img">
-                            <img src="@icons/header-footer/tree.svg" alt="tree">
-                        </div>
-                        <div class="footer__manufacture-title">
-                            Производство
-                        </div>
-                    </div>
-                    <div class="footer__manufacture-addres">
-                        Украина, Одесская обл, <br>
-                        с. Яськи, ул. Центральная, 232
-                    </div>
-                </div>
+            <div class="footer__map">
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2749.888093294494!2d30.714700699999998!3d46.43109760000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40c633a7b20ed43b%3A0xfaab4e45d64743a!2z0YPQuy4g0JrQvtGB0LzQvtC90LDQstGC0L7QsiwgMzIsINCe0LTQtdGB0YHQsCwg0J7QtNC10YHRgdC60LDRjyDQvtCx0LvQsNGB0YLRjCwgNjUwMDA!5e0!3m2!1sru!2sua!4v1677508673487!5m2!1sru!2sua"
+                    width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
-        </div>
-        <div class="footer__map">
-            <iframe
-                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2749.888093294494!2d30.714700699999998!3d46.43109760000001!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x40c633a7b20ed43b%3A0xfaab4e45d64743a!2z0YPQuy4g0JrQvtGB0LzQvtC90LDQstGC0L7QsiwgMzIsINCe0LTQtdGB0YHQsCwg0J7QtNC10YHRgdC60LDRjyDQvtCx0LvQsNGB0YLRjCwgNjUwMDA!5e0!3m2!1sru!2sua!4v1677508673487!5m2!1sru!2sua"
-                width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy"
-                referrerpolicy="no-referrer-when-downgrade"></iframe>
         </div>
     </div>
     <div class="footer__navigation">
