--- a/src/order.html
+++ b/src/order.html
@@ -224,5 +224,6 @@
     </section>
     @@include('html/footer.html', {theme: 'footer_dark'})
     <script src="js/script.header.js"></script>
+    <script src="js/script.order.js"></script>
 </body>
 </html>
