--- a/src/personal-cabinet.html
+++ b/src/personal-cabinet.html
@@ -22,7 +22,8 @@
                         fill="#8A8A8A" />
                 </svg>
 
-                Корзина
+                Личный кабинет
+                <div class="promo__path_add"></div>
             </div>
         </div>
     </section>
@@ -63,7 +64,8 @@
                 <li class="content__list-item"><span class="content__item" data-tag="Contact details">Контактная
                         информация</span></li>
                 <li class="content__list-item"><span class="content__item" data-tag="Password">Пароль</span></li>
-                <li class="content__list-item"><span class="content__item" data-tag="Address">Адрес реквизиты</span></li>
+                <li class="content__list-item"><span class="content__item" data-tag="Address">Адрес</span>
+                </li>
             </ul>
         </div>
         <div class="content__container">
