--- a/src/html/personal-cabinet/order-history.html
+++ b/src/html/personal-cabinet/order-history.html
@@ -63,14 +63,14 @@
                 <td class="order__body-cell">
                     2500 грн.</td>
                 <td class="order__body-cell">
-                    <div class="order__body-cell-view">
+                    <a href="@html/order.html" class="order__body-cell-view">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M23.8475 12.4669C23.6331 12.7602 18.5245 19.6484 11.9999 19.6484C5.47529 19.6484 0.36647 12.7602 0.152297 12.4672C-0.0507657 12.1889 -0.0507657 11.8115 0.152297 11.5333C0.36647 11.24 5.47529 4.35174 11.9999 4.35174C18.5245 4.35174 23.6331 11.24 23.8475 11.533C24.0508 11.8113 24.0508 12.1889 23.8475 12.4669ZM11.9999 5.93415C7.19383 5.93415 3.03127 10.506 1.79907 12.0006C3.02968 13.4966 7.18352 18.066 11.9999 18.066C16.8057 18.066 20.968 13.495 22.2007 11.9995C20.9701 10.5037 16.8163 5.93415 11.9999 5.93415Z" />
                             <path
                                 d="M11.9992 16.7471C9.38163 16.7471 7.25195 14.6174 7.25195 11.9998C7.25195 9.38219 9.38163 7.25252 11.9992 7.25252C14.6168 7.25252 16.7465 9.38219 16.7465 11.9998C16.7465 14.6174 14.6168 16.7471 11.9992 16.7471ZM11.9992 8.83497C10.2541 8.83497 8.83441 10.2547 8.83441 11.9998C8.83441 13.7449 10.2541 15.1646 11.9992 15.1646C13.7443 15.1646 15.164 13.7449 15.164 11.9998C15.164 10.2547 13.7444 8.83497 11.9992 8.83497Z" />
                         </svg>
-                    </div>
+                    </a>
                     <div class="order__body-cell-copy">
                         <svg width="16" height="21" viewBox="0 0 16 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <g clip-path="url(#clip0_323_30)">
@@ -103,14 +103,14 @@
                     2400 грн.
                 </td>
                 <td class="order__body-cell">
-                    <div class="order__body-cell-view">
+                    <a href="@html/404.html" class="order__body-cell-view">
                         <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <path
                                 d="M23.8475 12.4669C23.6331 12.7602 18.5245 19.6484 11.9999 19.6484C5.47529 19.6484 0.36647 12.7602 0.152297 12.4672C-0.0507657 12.1889 -0.0507657 11.8115 0.152297 11.5333C0.36647 11.24 5.47529 4.35174 11.9999 4.35174C18.5245 4.35174 23.6331 11.24 23.8475 11.533C24.0508 11.8113 24.0508 12.1889 23.8475 12.4669ZM11.9999 5.93415C7.19383 5.93415 3.03127 10.506 1.79907 12.0006C3.02968 13.4966 7.18352 18.066 11.9999 18.066C16.8057 18.066 20.968 13.495 22.2007 11.9995C20.9701 10.5037 16.8163 5.93415 11.9999 5.93415Z" />
                             <path
                                 d="M11.9992 16.7471C9.38163 16.7471 7.25195 14.6174 7.25195 11.9998C7.25195 9.38219 9.38163 7.25252 11.9992 7.25252C14.6168 7.25252 16.7465 9.38219 16.7465 11.9998C16.7465 14.6174 14.6168 16.7471 11.9992 16.7471ZM11.9992 8.83497C10.2541 8.83497 8.83441 10.2547 8.83441 11.9998C8.83441 13.7449 10.2541 15.1646 11.9992 15.1646C13.7443 15.1646 15.164 13.7449 15.164 11.9998C15.164 10.2547 13.7444 8.83497 11.9992 8.83497Z" />
                         </svg>
-                    </div>
+                    </a>
                     <div class="order__body-cell-copy">
                         <svg width="16" height="21" viewBox="0 0 16 21" fill="none" xmlns="http://www.w3.org/2000/svg">
                             <g clip-path="url(#clip0_323_30)">
