--- a/src/html/about-manufacture.html
+++ b/src/html/about-manufacture.html
@@ -5,14 +5,17 @@
                 О производителе
             </h2>
             <div class="about-manufacturer__subtitle">
-                <span>Сельскохозяйственный обслуживающий кооператив <br>
-                    “Орех Причерноморья”</span> выращивает смешанные сады <br>
-                ореха грецкого с фундуком, а также ореха грецкого
-                с шиповником, на площади более 150 гектаров.
-                <br><br>
-                Помимо этого кооператив занимается выращиванием
-                посадочного материала, саженцов привитого и непривитого
-                грецкого ореха, фундука и шиповника.
+                <div class="about-manufacturer__subtitle-text">
+                    <span>Сельскохозяйственный обслуживающий кооператив <br>
+                        “Орех Причерноморья”</span> выращивает смешанные сады <br>
+                    ореха грецкого с фундуком, а также ореха грецкого
+                    с шиповником, на площади более 150 гектаров.
+                </div>
+                <div class="about-manufacturer__subtitle-text-second">
+                    Помимо этого кооператив занимается выращиванием
+                    посадочного материала, саженцов привитого и непривитого
+                    грецкого ореха, фундука и шиповника.
+                </div>
 
                 <div class="about-manufacturer__hidden-text @@textMod">
                     <br>
