--- a/src/html/gallery.html
+++ b/src/html/gallery.html
@@ -96,8 +96,8 @@
                         <div class="gallery__group-play">
                             <img src="@icons/main/play.svg" alt="play">
                         </div>
-                        <div class="gallery__group-title">Проект UBHDP </div>
-                        <div class="gallery__group-subtitle">Вчера к нам приезжал американский агроном Рон , спасибо
+                        <div class="gallery__group-title @@mod">Проект UBHDP </div>
+                        <div class="gallery__group-subtitle @@mod">Вчера к нам приезжал американский агроном Рон , спасибо
                             Мельнику Евгению и проекту <b>UBHDP</b> за возможность получить консультацию
                             от мировых специалистов!</div>
                     </div>
