--- a/src/html/mini-news.html
+++ b/src/html/mini-news.html
@@ -56,6 +56,11 @@
                 <div class="mini-news__img">
                     <img src="@img/mini-news/news2.png" alt="news" loading="lazy">
                 </div>
+                <div class="mini-news__play">
+                    <div class="mini-news__play-img">
+                        <img src="@icons/main/play.svg" alt="play">
+                    </div>
+                </div>
                 <div class="mini-news__date">
                     12.04.2019
                 </div>
@@ -139,6 +144,11 @@
             <a class="swiper-slide mini-news__slide">
                 <div class="mini-news__img">
                     <img src="@img/mini-news/news2.png" alt="news" loading="lazy">
+                </div>
+                <div class="mini-news__play">
+                    <div class="mini-news__play-img">
+                        <img src="@icons/main/play.svg" alt="play">
+                    </div>
                 </div>
                 <div class="mini-news__date">
                     12.04.2019
