--- a/src/one-news.html
+++ b/src/one-news.html
@@ -36,16 +36,26 @@
                 <img src="@img/one-news/tractor.png" alt="tractor" loading="lazy">
             </div>
             <div class="news__text">
-                Сельскохозяйственный обслуживающий кооператив “Орех Причерноморья” предлагает своим клиентам выгодные
-                условия сотрудничества. Ореховый бизнес – один из наиболее перспективных в Украине. Ежегодная нехватка
-                продукта в Европе составляет 100 000 тонн. У Вас есть возможность зарабатывать десятки тысяч долларов в
-                год всего на нескольких гектарах земли. <br><br>
-                Предприятие основано в 2012 году для закладки смешанного сада грецкого ореха и фундука в Одесской
-                области. На сегодня уже заложено более 200 гектаров сада и этот процесс продолжается. Кооператив
-                предоставляет полный цикл сопровождения: от выращивания до сбыта. <br><br>
-                Кроме выращивания грецкого ореха и фундука, компания занимается выращиванием саженцев, разведением и
-                выращиванием овец, а также является первой в Украине компанией, приступившей к промышленному выращиванию
-                трюфелей на корнях фундука.
+                <span>
+                    Сельскохозяйственный обслуживающий кооператив “Орех Причерноморья” предлагает своим клиентам
+                    выгодные
+                    условия сотрудничества. Ореховый бизнес – один из наиболее перспективных в Украине. Ежегодная
+                    нехватка
+                    продукта в Европе составляет 100 000 тонн. У Вас есть возможность зарабатывать десятки тысяч
+                    долларов в
+                    год всего на нескольких гектарах земли.
+                </span>
+                <span>
+                    Предприятие основано в 2012 году для закладки смешанного сада грецкого ореха и фундука в Одесской
+                    области. На сегодня уже заложено более 200 гектаров сада и этот процесс продолжается. Кооператив
+                    предоставляет полный цикл сопровождения: от выращивания до сбыта.
+                </span>
+                <span>
+                    Кроме выращивания грецкого ореха и фундука, компания занимается выращиванием саженцев, разведением и
+                    выращиванием овец, а также является первой в Украине компанией, приступившей к промышленному
+                    выращиванию
+                    трюфелей на корнях фундука.
+                </span>
             </div>
             <h2 class="news__subtitle">
                 В Украине появится первое насаждение
@@ -84,15 +94,18 @@
                 органического шиповника
             </h2>
             <div class="news__text">
-                Сельскохозяйственный обслуживающий кооператив “Орех Причерноморья” предлагает своим клиентам выгодные
-                условия сотрудничества. Ореховый бизнес – один из наиболее перспективных в Украине. Ежегодная нехватка
-                продукта в Европе составляет 100 000 тонн. У Вас есть возможность зарабатывать десятки тысяч долларов в
-                год всего на нескольких гектарах земли.
-                <br><br>
-                Нами разработано и опробовано на собственной практике предложение для закладки многолетних насаждений
-                шиповника,
-                на земельных участках не пригодных к традиционному земледелию. Первых 5 гектар промышленной плантации
-                шиповника, были высажены на месте бывшей сельской свалки и остатков разрушенной молочно товарной фермы.
+                <span>
+                    Сельскохозяйственный обслуживающий кооператив “Орех Причерноморья” предлагает своим клиентам выгодные
+                    условия сотрудничества. Ореховый бизнес – один из наиболее перспективных в Украине. Ежегодная нехватка
+                    продукта в Европе составляет 100 000 тонн. У Вас есть возможность зарабатывать десятки тысяч долларов в
+                    год всего на нескольких гектарах земли.
+                </span>
+                <span>
+                    Нами разработано и опробовано на собственной практике предложение для закладки многолетних насаждений
+                    шиповника,
+                    на земельных участках не пригодных к традиционному земледелию. Первых 5 гектар промышленной плантации
+                    шиповника, были высажены на месте бывшей сельской свалки и остатков разрушенной молочно товарной фермы.
+                </span>
             </div>
         </div>
         <aside class="aside">
